android: Add a detailed histogram for library prefetch failures.

Library prefetch sometimes fails on some Android x Chrome
versions. Adding a detailed histogram to get the root cause. See the
attached bug for details.

Also a bit of cleanup:
- Move the broad histogram recording to native
- Change a few function's signatures accordingly.

Bug: 843102
Change-Id: I5952141c541f51975aca908ab800d389bac1a183
Reviewed-on: https://chromium-review.googlesource.com/1059619
Commit-Queue: Benoit L <lizeb@chromium.org>
Reviewed-by: Matthew Cary <mattcary@chromium.org>
Reviewed-by: agrieve <agrieve@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559027}
Former-commit-id: 64059965656108b4d6a08c5b708924c2a917f58b