base/android/library_loader/library_prefetcher.cc
@@ -22,6 +22,7 @@
 #include "base/format_macros.h"
 #include "base/logging.h"
 #include "base/macros.h"
+#include "base/metrics/histogram_macros.h"
 #include "base/posix/eintr_wrapper.h"
 #include "base/strings/string_util.h"
 #include "base/strings/stringprintf.h"
@@ -52,7 +53,7 @@ constexpr size_t kPageSize = 4096;
 // for the context.
 __attribute__((no_sanitize_address))
 #endif
-bool Prefetch(size_t start, size_t end) {
+void Prefetch(size_t start, size_t end) {
   unsigned char* start_ptr = reinterpret_cast<unsigned char*>(start);
   unsigned char* end_ptr = reinterpret_cast<unsigned char*>(end);
   unsigned char dummy = 0;
@@ -61,7 +62,6 @@ bool Prefetch(size_t start, size_t end) {
     // loop.
     dummy ^= *static_cast<volatile unsigned char*>(ptr);
   }
-  return true;
 }
 
 // Populates the per-page residency between |start| and |end| in |residency|. If
@@ -181,19 +181,23 @@ void DumpResidency(size_t start,
     file.WriteAtCurrentPos(&dump[0], dump.size());
   }
 }
-}  // namespace
 
-// static
-bool NativeLibraryPrefetcher::ForkAndPrefetchNativeLibrary(bool ordered_only) {
-#if defined(CYGPROFILE_INSTRUMENTATION)
-  // Avoid forking with cygprofile instrumentation because the child process
-  // would create a dump as well.
-  return false;
-#endif
+// These values are persisted to logs. Entries should not be renumbered and
+// numeric values should never be reused.
+// Used for "LibraryLoader.PrefetchDetailedStatus".
+enum class PrefetchStatus {
+  kSuccess = 0,
+  kWrongOrdering = 1,
+  kForkFailed = 2,
+  kChildProcessCrashed = 3,
+  kChildProcessKilled = 4,
+  kMaxValue = kChildProcessKilled
+};
 
+PrefetchStatus ForkAndPrefetch(bool ordered_only) {
   if (!IsOrderingSane()) {
     LOG(WARNING) << "Incorrect code ordering";
-    return false;
+    return PrefetchStatus::kWrongOrdering;
   }
 
   // Looking for ranges is done before the fork, to avoid syscalls and/or memory
@@ -213,22 +217,57 @@ bool NativeLibraryPrefetcher::ForkAndPrefetchNativeLibrary(bool ordered_only) {
     setpriority(PRIO_PROCESS, 0, kBackgroundPriority);
     // _exit() doesn't call the atexit() handlers.
     for (const auto& range : ranges) {
-      if (!Prefetch(range.first, range.second))
-        _exit(EXIT_FAILURE);
+      Prefetch(range.first, range.second);
     }
     _exit(EXIT_SUCCESS);
   } else {
     if (pid < 0) {
-      return false;
+      return PrefetchStatus::kForkFailed;
     }
     int status;
     const pid_t result = HANDLE_EINTR(waitpid(pid, &status, 0));
     if (result == pid) {
-      if (WIFEXITED(status)) {
-        return WEXITSTATUS(status) == EXIT_SUCCESS;
+      if (WIFEXITED(status))
+        return PrefetchStatus::kSuccess;
+      if (WIFSIGNALED(status)) {
+        int signal = WTERMSIG(status);
+        switch (signal) {
+          case SIGSEGV:
+          case SIGBUS:
+            return PrefetchStatus::kChildProcessCrashed;
+            break;
+          case SIGKILL:
+          case SIGTERM:
+          default:
+            return PrefetchStatus::kChildProcessKilled;
+        }
       }
     }
-    return false;
+    // Should not happen. Per man waitpid(2), errors are:
+    // - EINTR: handled.
+    // - ECHILD if the process doesn't have an unwaited-for child with this PID.
+    // - EINVAL.
+    return PrefetchStatus::kChildProcessKilled;
+  }
+}
+
+}  // namespace
+
+// static
+void NativeLibraryPrefetcher::ForkAndPrefetchNativeLibrary(bool ordered_only) {
+#if defined(CYGPROFILE_INSTRUMENTATION)
+  // Avoid forking with cygprofile instrumentation because the child process
+  // would create a dump as well.
+  return;
+#endif
+
+  PrefetchStatus status = ForkAndPrefetch(ordered_only);
+  UMA_HISTOGRAM_BOOLEAN("LibraryLoader.PrefetchStatus",
+                        status == PrefetchStatus::kSuccess);
+  UMA_HISTOGRAM_ENUMERATION("LibraryLoader.PrefetchDetailedStatus", status);
+  if (status != PrefetchStatus::kSuccess) {
+    LOG(WARNING) << "Cannot prefetch the library. status = "
+                 << static_cast<int>(status);
   }
 }
 
